renomeando alguns arquivos

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/users.css">
-    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/myprofile.css">
     <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/partials/header.css">
     <link rel="stylesheet" href="/css/partials/navbarDash.css">
@@ -15,6 +15,6 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/articleOne.css">
     <link rel="stylesheet" href="/css/articlePage.css">
-    <link rel="stylesheet" href="/css/profileUser.css">
+    <link rel="stylesheet" href="/css/userProfile.css">
     <title>main</title>
 </head>
