adicionando item explicação a database/view/model/controller

--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -50,8 +50,7 @@
                     <p><%- steps_by_step %></p>
 
                     <h2 class="article__title__body">Explicação</h2>
-                    <p>Isso ocorre devido Isso ocorre devido Isso ocorre devido Isso ocorre devido</p>
-
+                    <p><%- explanation %></p>
 
                     <h2 class="article__title__body diff">Video de demonstração</h2>
                     <div class="article__video__content">
