--- a/views/articlesNewSubadmin.ejs
+++ b/views/articlesNewSubadmin.ejs
@@ -37,7 +37,7 @@
                 <fieldset>
                     <legend>Corpo do experimento</legend>
                     <div class="article__item">
-                        <label for="">Materiais</label>
+                        <label for="">Materiais utilizados</label>
                         <textarea name="materials" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>2 - Palitos
 5 - Papeis
 ....
@@ -46,11 +46,16 @@
                     </div>
 
                     <div class="article__item">
-                        <label for="">Passo a passo</label>
+                        <label for="">Instruções</label>
                         <textarea name="steps_by_step" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
 2- Misturamos tudo e..
 ....
                         </textarea>
+                    </div>
+
+                    <div class="article__item">
+                        <label for="">Explicação</label>
+                        <textarea name="explanation" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>Isso ocorre devido...</textarea>
                     </div>
 
                     <div class="article__item">
@@ -92,7 +97,7 @@
                 <fieldset>
                     <legend>Orientações para professores</legend>
                     <div class="article__item">
-                        <label for="">Dicas importantes</label>
+                        <label for="">Orientações importantes</label>
                         <textarea name="tips_important" id="" placeholder="Um ponto negativo deste experimento é que se deve ter cuidado na hora de colocar fogo na mão" required></textarea>
                     </div>
 
