--- a/public/css/userProfile.css
+++ b/public/css/userProfile.css
@@ -1,8 +1,10 @@
 .profile__content {
-    width: 980px;
+    width: var(--width-size-main);
     display: flex;
     flex-direction: column;
     background-color: white;
+    box-shadow: var(--shadow-box-main);
+
 }
 
 .title__header {
